--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
+	"scripts": {
+		"build":"tsc",
+		"dev":"vite --host",
+		"preview":"vite preview"
+	},
 	"devDependencies": {
-		"typescript": "^5.8.3"
+		"@types/node": "^24.0.12",
+		"typescript": "^5.8.3",
+		"vite":"^7.0.3"
+	},
+	"dependencies": {
+		"@babylonjs/core": "8.15.1"
 	}
 }
