--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
+	"type": "module",
 	"scripts": {
-		"build":"tsc",
-		"dev":"vite --host",
-		"preview":"vite preview"
+		"dev": "vite --host",
+		"build": "vite build",
+		"preview": "vite preview"
 	},
 	"devDependencies": {
-		"@types/node": "^24.0.12",
+		"@types/node": "^24.0.13",
 		"typescript": "^5.8.3",
-		"vite":"^7.0.3"
+		"vite": "^7.0.4"
 	},
 	"dependencies": {
 		"@babylonjs/core": "8.15.1"
